# dotfiles

./: .gitignore  CLAUDE.md  README.md  init.sh  tmp
aerospace/: .aerospace.toml
alacritty/.config/alacritty/: alacritty.toml  alacritty.toml.46eab670.bak
claude/.claude/: CLAUDE.md  settings.json  statusline-command.sh
claude/.claude/commands/: anschreiben.md  commit.md  easyrapport.md  elixir-review.md  pr-ready.md  pro.md  ticket.md  translations.md
claude/.claude/data/: pid-tenant-map.json
codex/.codex/: AGENTS.md
jetbrains/: .ideavimrc
kanata/.config/kanata/: kanata.kbd
karabiner/.config/karabiner/: karabiner.json
lazygit/.config/lazygit/: config.yml  state.yml
mcphub/.config/mcphub/: servers.json
nix/: .gitignore  ARCHITECTURE.md  README.md  bootstrap.sh  darwin-configuration.nix  flake.nix  home.nix
nix/hosts/dev/: configuration.nix  hardware-configuration.nix  home.nix
nix/hosts/macbook/: darwin.nix  home.nix
nix/modules/darwin/: defaults.nix  home-files.nix  home-launchd.nix  home-packages.nix  home-shell.nix  (+5 more)
nix/pencil/: default.nix
nix/rust/zellij-welcome/: Cargo.toml  FEATURES.md  PREVIEW.txt  README.md  build.sh  default.nix
nix/rust/zellij-welcome/src/: main.rs
nix/scripts/: nerdfetch  open-in-obsidian  update-codelayer  update-t3code  zellij-welcome
nix/secrets/: master.key.age  secrets.nix  ssh-azure.age  ssh-github-personal.age  ssh-github-work.age
nix/t3code/: default.nix
nix/tui-studio/: default.nix
nvim/lua/: options.lua
raycast/: README.md  settings.rayconfig
tmux/: .tmux.conf
vim/: .vimrc
zsh/: .zshrc
(+67 files in other folders)
